--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html>
 
 <head>
   <meta charset="utf-8">
@@ -7,11 +7,12 @@
   
 </head>
 
-<body>
+<body style="color: white; font-size: 16px;">
 <div style="display: inline-block; width: 50px; height: 50px; background: red;">50px</div>
 <div style="display: inline-block; width: 3.1em; height: 3.1em; background: blue;">3.1em</div>
 <div style="display: inline-block; width: 1.3cm; height: 1.3cm; background: green;">1.3cm</div>
 <div style="display: inline-block; width: 0.51in; height: 0.51in; background: grey;">0.51in</div>
+<div style="display: inline-block; width: 37pt; height: 37pt; background: purple;">0.5pt</div>
 
 </body>
 
